fix title-wrapper-with-link align items

--- a/assets/base.css
+++ b/assets/base.css
@@ -787,7 +787,7 @@ summary::-webkit-details-marker {
 .title-wrapper-with-link {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  /* align-items: flex-end; */
   gap: 1rem;
   margin-bottom: 3rem;
   flex-wrap: wrap;
